route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
  selfLink: /apis/route.openshift.io/v1/namespaces/simple-app/routes/httpd
spec:
  host: httpd-simple-app.192.168.64.5.nip.io
  port:
    targetPort: 8080
  subdomain: ""
  to:
    kind: Service
    name: httpd
    weight: 100
  wildcardPolicy: None
  subdomain: ''
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
